feat: uncomment capdrop

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
     env_file:
       - .env
     restart: unless-stopped
-    #cap_drop:
-    #  - ALL
+    cap_drop:
+      - ALL
     cap_add:
       - CHOWN
       - SETGID
