--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 services:
   open-webui:
     container_name: open-webui
-    image: ghcr.io/open-webui/open-webui:ollama
+    image: ghcr.io/open-webui/open-webui:latest
     ports:
-      - "3000:8080"      # OpenWebUI port
-      - "11434:11434"    # Ollama API port
+      - "3000:8080"
     volumes:
       - ollama:/root/.ollama
       - open-webui:/app/backend/data
@@ -14,8 +13,26 @@ services:
       RAG_WEB_SEARCH_RESULT_COUNT: "3"
       RAG_WEB_SEARCH_CONCURRENT_REQUESTS: "10"
       SEARXNG_QUERY_URL: "http://searxng:8080/search?q=<query>"
-      OLLAMA_HOST: "http://0.0.0.0:11434"
     restart: always
+
+  ollama:
+    container_name: ollama
+    image: ollama/ollama:latest
+
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama:/root/.ollama
+      - /opt/rocm:/opt/rocm:ro
+    restart: unless-stopped
+    devices:
+      - /dev/kfd
+      - /dev/dri
+      #- /dev/amdgpu
+    group_add:
+      - video
+    environment:
+      HSA_OVERRIDE_GFX_VERSION: "9.0.0"
 
   searxng:
     container_name: searxng
