--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 services:
   open-webui:
     container_name: open-webui
-    image: ghcr.io/open-webui/open-webui:latest
+    image: ghcr.io/open-webui/open-webui:0.6.22 # also try :latest
     ports:
       - "3000:8080"
     volumes:
       - ollama:/root/.ollama
       - open-webui:/app/backend/data
     environment:
+      OFFLINE_MODE: "True"
       ENABLE_RAG_WEB_SEARCH: "True"
       RAG_WEB_SEARCH_ENGINE: "searxng"
       RAG_WEB_SEARCH_RESULT_COUNT: "3"
@@ -17,26 +18,22 @@ services:
 
   ollama:
     container_name: ollama
-    image: ollama/ollama:latest
-
+    image: ollama/ollama:0.11.4 # also try :latest
     ports:
       - "11434:11434"
+    restart: unless-stopped
     volumes:
       - ollama:/root/.ollama
-      - /opt/rocm:/opt/rocm:ro
-    restart: unless-stopped
+      - /opt/rocm:/opt/rocm:ro  # optional: enables AMD GPUs inference
     devices:
-      - /dev/kfd
-      - /dev/dri
-      #- /dev/amdgpu
-    group_add:
-      - video
+      - /dev/kfd  # optional: enables AMD GPUs inference
+      - /dev/dri  # optional: enables AMD GPUs inference
     environment:
-      HSA_OVERRIDE_GFX_VERSION: "9.0.0"
+      HSA_OVERRIDE_GFX_VERSION: "9.0.c" # optional: enables AMD GPUs inference
 
   searxng:
     container_name: searxng
-    image: searxng/searxng:latest
+    image: searxng/searxng:2025.8.12-6b1516d  # also try :latest
     ports:
       - "8080:8080"
     volumes:
